force-app/main/default/objects/QBO_Event__c/QBO_Event__c.object-meta.xml
<CustomObject>
    <description>Represents the QBO event notification</description>
    <label>QBO Event</label>
    <nameField>
        <displayFormat>QBE-{0000000000}</displayFormat>
        <label>QBO Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QBO Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>