force-app/main/default/objects/QBO_Event__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>What QBO entity did the event notification come in for</description>
    <label>Entity</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>