force-app/main/default/objects/QBO_Event__c/fields/Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_Id__c</fullName>
    <description>The Id of the entity from QBO</description>
    <label>Entity Id</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>