force-app/main/default/objects/QBO_Event__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <description>When the change was made to the event entity</description>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>