force-app/main/default/objects/QBO_Event__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>What Operation occured for this event</description>
    <label>Operation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>